...
	@ObservedObject var api = DataHouse()
	@ObservedObject var list = APICall()
	@State private var disableButton = false //prevents multiple views from being loaded
	@State private var showRandom = false //bool value for view switching
	@State private var showList = false //bool for list
	@State var lis: [String] = [""] //string array for recieved data
	let radiusButton = ["5", "10", "15", "25"];	let radiusArray = [8000, 16000, 24000, 40000]
	@State var rad: Int = 8000 //radius values ^
	let priceButton = ["$", "$$", "$$$", "$$$$"]; let priceArray = ["1", "2", "3", "4"]
	@State var price: String = "" //price values ^
	@State var priceToggle = [false, false, false, false] //bool for price
	@State var includeSaved = true
	@State var showInfo = false //shows info block about split decision
	@State var term: String = "restaurants,food"
	//icon searchwords & bools
...
	let artW = ["museums,galleries,artmuseums,gardens,childrenmuseums", "", "", ""] //4
	let catShop = ["fashion,sunglasses,accessories,hats,lingerie,menscloth,womenscloth,shoes,vintage,tradclothing,watches,swimwear,leather,clothingrental,bespoke", "media,bookstores,comicbooks,mags,musicvideo,videogamestores,videoandgames,vinyl_records", "homeandgarden,appliances,furniture,grillingequipment,hardware,holidaydecorations,homedecor,kitchenandbath,kitchensupplies,lightingstores,gardening,
	@State var artCat = ""
	@State var artCall: Bool = false
	@State var goHome: Bool = false
	@State var category: String = ""
	@State var iconsFood = ["BBQ", "Breakfast", "Burgers", "Cafe", "Central Asian", "Chicken", "Mexican", "Pizza", "Ramen", "Salad", "Sandwiches", "Sushi", "Vegan", "Vegetarian"]
	@State var iconsNight = ["Pub & Dive", "Beer Bar", "Cocktail Bar", "Club & Music"]
	@State var iconsActivity = ["Museums", "Zoo", "Escape Game", "Sports"]
	@State var iconsShop = ["Clothing", "Media", "Home", "Mall"]
	@State var iconFoodToggle: [Bool] = [false, false, false, false, false, false, false, false, false, false, false, false, false, false]
	@State var iconNightToggle: [Bool] = [false, false, false, false]
	@State var iconActivityToggle: [Bool] = [false, false, false, false]
	@State var iconShopToggle: [Bool] = [false, false, false, false]
...
