...
//  Written by Timothy Gedney

import SwiftUI

struct TermSelect: View {
	@Binding var term: String
	let termButton = ["Restaurants", "Nightlife", "Activities", "Shopping"]
	//term searchwords
	let termArray = ["restaurants,food", "nightlife", "active", "shopping"]
	@Binding var iconFoodToggle: [Bool]
	@Binding var iconNightToggle: [Bool]
	@Binding var iconActivityToggle: [Bool]
	@Binding var iconShopToggle: [Bool]
...
